[gd_scene load_steps=40 format=2]

[ext_resource path="res://Enemys/scripts/Skeleton.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemys/comunes/skeleton_.png" type="Texture" id=2]
[ext_resource path="res://Shaders/enemy_shader.tres" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/froze = false

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6.5 )

[sub_resource type="CircleShape2D" id=42]
radius = 107.5

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 7.26012, 10.3254 )

[sub_resource type="Animation" id=9]
resource_name = "Spawn"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:moving_anim")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:die")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:attacking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:hited")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=55]
resource_name = "Spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=51]
resource_name = "Waiting"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "attack"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 7, 12, 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=16]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:die")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/conditions/Hurt")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:hited")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "RESET"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "Spawn"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "Waiting"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
advance_condition = "Attack"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
advance_condition = "Hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
advance_condition = "Hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2
advance_condition = "Die"

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2
advance_condition = "Idle"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=45]
advance_condition = "Run"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
advance_condition = "Attack"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
advance_condition = "Idle"
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
advance_condition = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
advance_condition = "Hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id=53]
advance_condition = "Spawn"

[sub_resource type="AnimationNodeStateMachine" id=7]
states/Idle/node = SubResource( 17 )
states/Idle/position = Vector2( 435, 187 )
states/RESET/node = SubResource( 18 )
states/RESET/position = Vector2( 604, 187 )
states/Spawn/node = SubResource( 43 )
states/Spawn/position = Vector2( 260.359, 187 )
states/Waiting/node = SubResource( 52 )
states/Waiting/position = Vector2( 73.3587, 187 )
states/attack/node = SubResource( 19 )
states/attack/position = Vector2( 435, 2 )
states/die/node = SubResource( 20 )
states/die/position = Vector2( 761, 94 )
states/hurt/node = SubResource( 21 )
states/hurt/position = Vector2( 604, 94 )
states/run/node = SubResource( 22 )
states/run/position = Vector2( 270.359, 94 )
transitions = [ "Idle", "attack", SubResource( 25 ), "Idle", "hurt", SubResource( 28 ), "attack", "hurt", SubResource( 29 ), "hurt", "die", SubResource( 34 ), "hurt", "RESET", SubResource( 35 ), "attack", "Idle", SubResource( 40 ), "RESET", "Idle", SubResource( 41 ), "Spawn", "Idle", SubResource( 44 ), "Idle", "run", SubResource( 45 ), "run", "attack", SubResource( 46 ), "run", "Idle", SubResource( 47 ), "attack", "run", SubResource( 48 ), "run", "hurt", SubResource( 49 ), "Waiting", "Spawn", SubResource( 53 ) ]
start_node = "Waiting"
end_node = "die"
graph_offset = Vector2( -75.6413, -22.4595 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=8]

[node name="test enem" type="KinematicBody2D"]
material = SubResource( 6 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 0, -3 )
texture = ExtResource( 2 )
hframes = 4
vframes = 7

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 3

[node name="Detection_Area" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_Area"]
shape = SubResource( 42 )

[node name="Attack_Area" type="Area2D" parent="."]
visible = false
position = Vector2( -1, -4 )
scale = Vector2( 0.688694, 0.774788 )
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Area"]
position = Vector2( 1.45202, 6.45338 )
shape = SubResource( 56 )

[node name="Attack_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Status_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Burn_Timer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="yield_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/Spawn = SubResource( 55 )
anims/Waiting = SubResource( 51 )
anims/attack = SubResource( 14 )
anims/die = SubResource( 16 )
anims/hurt = SubResource( 15 )
anims/run = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 8 )
parameters/conditions/Attack = false
parameters/conditions/Die = false
parameters/conditions/Hurt = false
parameters/conditions/Idle = false
parameters/conditions/Run = false
parameters/conditions/Spawn = false

[node name="Line2D" type="Line2D" parent="."]
width = 3.0

[connection signal="body_entered" from="Detection_Area" to="." method="_on_Detection_Area_body_entered"]
[connection signal="body_exited" from="Detection_Area" to="." method="_on_Detection_Area_body_exited"]
[connection signal="body_entered" from="Attack_Area" to="." method="_on_Attack_Area_body_entered"]
[connection signal="timeout" from="Attack_Timer" to="." method="_on_Attack_Timer_timeout"]
[connection signal="timeout" from="Status_Timer" to="." method="_on_Status_Timer_timeout"]
[connection signal="timeout" from="Burn_Timer" to="." method="_on_Burn_Timer_timeout"]
[connection signal="timeout" from="yield_Timer" to="." method="_on_yielf_Timer_timeout"]
